# Eyetracking-based-guided-attention-to-model-cycling-perception-of-safety

./: .gitignore  CITATION.cff  LICENSE  README.md  backbone_registry.py  build_fixation_based_attention_maps_ogama_like.py  data.py  gaze_policy.py  model_variant_policy.py  pyproject.toml  run_test.sh  sweep-tests-Copy1.yaml  test.py  train.py  train_main_utils.py  train_utils.py
Analysis/: 0.survey_eyetracking_eda_and_model_alignment.ipynb  3.gaze_hp_tunning.ipynb  4.gaze_modes_acc.ipynb  5.gaze_frac.ipynb  7.preprocessing_augmentation_visualizer.ipynb  Augmentation.ipynb  Backbone_analysis.ipynb  checkpoint_eval_accuracy_and_saliency.ipynb  saliency_metrics.py
build_datasets/: build_eyetracker_dataset.ipynb  build_final_comparisons_df.ipynb  build_synthetic_berlin.ipynb  convert_comparisons_berlin2_to_train_format.ipynb
configs/: sweep-tests-Copy2.yaml
deployment_app/: README.md  app.py  requirements.txt  run_app.py
deployment_app/model_code/: backbone_registry.py  gaze_policy.py  model_builder.py  model_factory.py  model_variant_config.py
deployment_app/perceived_safety_app/: __init__.py  attention_maps.py  checkpoint_resolver.py  config.py  explanation_maps.py  image_preprocessing.py  inference.py  model_catalog.py  model_checkpoints.py  model_loader.py  model_registry.py  model_runtime.py  prediction.py  preprocessing.py  routes.py  (+3 more)
nets/: attention_alignment.py  cnn.py  egvit.py  gaze_guidance.py  transformer.py  transformer_forward.py  transformer_utils.py
scripts/: test_script.py  train_script.py
utils/: accuracy.py  log.py  losses.py  ranking.py
(+64 files in other folders)
