[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "egpcs"
version = "0.1.0"
description = "Eye-Tracking-Guided Perceived Cycling Safety"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "optuna",
    "pandas",
    "Pillow",
    "pyarrow",
    "pytorch-ignite",
    "scikit-learn",
    "timm",
    "torch",
    "torchvision",
    "wandb",
]

[project.scripts]
egpcs-train = "egpcs.cli.train:main"
egpcs-evaluate = "egpcs.cli.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]
